2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Change default parameters.
	* src/roboptim-core-cfsqp-plugin.cc: Increase default max iterations.
	* tests/optimization-problem-1.stdout,
	* tests/plugin.stdout
	* tests/simple-1.stdout,
	* tests/simple-2.stdout,
	* tests/simple.stdout: Regenerate.

2010-02-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Install plug-in in roboptim-core subdirectory of libdir.

	CAUTION: starting from now, $(libdir)/roboptim-core /MUST/
	be in your LT_LIBRARY_PATH! It is also recommended to remove
	manually your old $(libdir)/roboptim-core-cfsqp* files.

	* src/Makefile.am: Here.

2010-02-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Update test suite output.
	* tests/optimization-problem-1.stdout,
	* tests/plugin.stdout,
	* tests/simple-1.stdout,
	* tests/simple-2.stdout,
	* tests/simple.stdout: Regenerate.

2010-02-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Integrate new parameters management system.
	* configure.ac: Require a newer version.
	* include/roboptim/core/plugin/cfsqp.hh: Remove old attributes and
	replace them by parameters.
	* src/roboptim-core-cfsqp-plugin.cc: Implement parameter retrieval and
	initialize properly parameters vector when instantiating the solver.

2009-11-19  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-11-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix requirements in spec file.
	* roboptim-core-cfsqp-plugin.spec.in: Here.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS.
	* NEWS: Fill release v0.4 information.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Do not generate pkg-config file for modules.
	* Makefile.am: Here.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize/.
	* Makefile.am: Include release related rules.
	* build-aux: Synchronize.
	* doc/Makefile.am: Fix include path.

2009-11-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.